Fixed AxeDev contrasting errors.

--- a/vite-project/src/components/rated-list/Landing.css
+++ b/vite-project/src/components/rated-list/Landing.css
@@ -49,7 +49,7 @@
   width: 200%;
   text-align: center;
   text-decoration: none;
-  color: #021225;
+  color: darkblue;
   font-weight: 500;
 }
 
@@ -59,5 +59,5 @@
 
 .article-item-rating {
   font-weight: bold;
-  color: #b60707;
+  color: black;
 }
